--- a/style.css
+++ b/style.css
@@ -1,12 +1,13 @@
+@import url('https://fonts.googleapis.com/css?family=Tomorrow&display=swap');
 :root{
-    --accent: #ff66bf;
-    --dark: #1a2636;
+    --accent: #ff6666;
+    --dark: #1a361b;
     --light: #ebf5ee;
-    --border: 5px solid var(--accent);
+    --border: 10px solid var(--accent);
 }
 
 body{
-    font-family: 'Oswald', sans-serif;
+    font-family: 'Tomorrow', sans-serif;
     font-size: 2rem;
     background: var(--dark);
     color: var(--light);
@@ -21,9 +22,6 @@ div{
     grid-column: 2 / 3;
 }
 
-p{
-    grid-column: 2 / 3;
-}
 
 div{
     height: 80vh;
@@ -40,3 +38,31 @@ div{
     opacity: .35;
 }
 
+.table{
+    display: table;
+}
+
+.table p {
+    display: table-cell;
+    vertical-align: middle;
+}
+
+.flexbox{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.grid{
+    display: grid;
+    align-items: center;
+    justify-content: center;
+    place-items: center;
+}
+
+.margins{
+    display: grid;
+}
+.margins p{
+    margin: auto;
+}
